# DOEXT

./: .gitignore  LICENSE  README.md  local-setup.md  pyproject.toml  requirements.txt
notebooks/: demo.ipynb  llm-generation.ipynb
notebooks/data/: sample_invoice_data.xlsx
