[project]
name = "DOCEXT"
version = "0.1.0"
description = "LLM-powered invoice data extractor using Python"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uv>=0.2.0",
    "pydantic>=2.6.4",
    "pymupdf>=1.23.19",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "Pillow>=10.2.0",
    "openai>=1.17.0",
    "transformers>=4.39.3",
    "sentence-transformers>=2.6.1",
    "torch>=2.0.0",
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.4",
    "docling",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "httpx>=0.27.0",
    "pre-commit>=3.7.0"
]
mlops = [
    "mlflow>=2.11.3",
    "dvc>=3.50.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
